# MdtModelView

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py
ci_cd/GitLab/: BuildAndTest_Linux.yml  BuildAndTest_Windows.yml  Conan_CreateAndTest_Linux.yml  Conan_CreateAndTest_Windows.yml  Conan_Deploy_Linux.yml  Conan_Deploy_Windows.yml  Doc.yml
doc/: Doxyfile-dev.in  Doxyfile.in
doc/cpp/: ItemModel.dox  ItemView.dox  mainpage.dox
doc/plantuml/ItemModel/ClassDiagrams/: ItemModel_Overview.puml
doc/plantuml/Mdt/ItemModel/: AbstractTableModel.puml
doc/plantuml/Qt/Overviews/Graphics_View/: Graphics_View.puml
examples/: CMakeLists.txt
examples/sandbox/: CMakeLists.txt
examples/sandbox/ItemSelectionModelTestWidget/: CMakeLists.txt  ItemSelectionModelTestWidget.cpp  ItemSelectionModelTestWidget.h  ItemSelectionModelTestWidget.ui  TableModel.cpp  TableModel.h  main.cpp
examples/sandbox/ListAndDetailView/: CMakeLists.txt  Device.cpp  Device.h  DeviceLibrary.cpp  DeviceLibrary.h  DeviceListTable.cpp  DeviceListTable.h  DeviceListTableModel.cpp  DeviceListTableModel.h  Editor.cpp  Editor.h  ListAndDetailViewWidget.cpp  ListAndDetailViewWidget.h  ListAndDetailViewWidget.ui  main.cpp
libs/: CMakeLists.txt
libs/Catch2/: Catch2Main.cpp  Catch2QString.cpp  Catch2QString.h
libs/ItemModel/: CMakeLists.txt
libs/ItemModel/benchmarks/: CMakeLists.txt
libs/ItemModel/benchmarks/src/: RowSelectionBenchmark.cpp
libs/ItemModel/src/: CMakeLists.txt
libs/ItemModel/src/Mdt/ItemModel/: AbstractTableModel.cpp  AbstractTableModel.h  Helpers.cpp  Helpers.h  ItemSelectionModel.cpp  ItemSelectionModel.h  NumericLimits.cpp  NumericLimits.h  ProxyModelPipeline.cpp  ProxyModelPipeline.h  ReverseRowListView.cpp  ReverseRowListView.h  ReverseRowListViewConstIterator.cpp  ReverseRowListViewConstIterator.h  RowListView.cpp  RowListView.h  RowListViewConstIterator.cpp  RowListViewConstIterator.h  RowRange.cpp  RowRange.h  RowRangeList.cpp  RowRangeList.h  RowRangeListAlgorithm.cpp  RowRangeListAlgorithm.h  RowRangeListDef.h  RowSelection.cpp  RowSelection.h  RowSelectionHelpers.cpp  RowSelectionHelpers.h  StlHelpers.cpp  StlHelpers.h
libs/ItemModel/tests/: CMakeLists.txt
libs/ItemModel/tests/src/: AbstractTableModelQTLTest.cpp  AbstractTableModelQTLTest.h  AbstractTableModel_AppendRecord_Test.cpp  AbstractTableModel_AppendRow_Test.cpp  AbstractTableModel_CustomRoles_Test.cpp  AbstractTableModel_Editable_Test.cpp  AbstractTableModel_InsertRows_Test.cpp  AbstractTableModel_PrependRow_Test.cpp  AbstractTableModel_ReadOnly_Test.cpp  AbstractTableModel_RemoveFirstRow_Test.cpp  AbstractTableModel_RemoveLastRow_Test.cpp  AbstractTableModel_RemoveRows_Test.cpp  ItemModelHelpersTest.cpp  ItemModelStlHelpersTest.cpp  ItemSelectionModelTest.cpp  ItemSelectionModelWidgetsTest.cpp  ItemSelectionModelWidgetsTest.h  NumericLimitsTest.cpp  ProxyModelPipelineTest.cpp  ReverseRowListViewConstIteratorTest.cpp  ReverseRowListViewTest.cpp  RowListViewConstIteratorTest.cpp  RowListViewTest.cpp  RowRangeListAlgorithmTest.cpp  RowRangeListTest.cpp  RowRangeTest.cpp  RowSelectionHelpersTest.cpp  RowSelectionTest.cpp
libs/ItemModel/tests/src/common/: AppendRecordTableModel.cpp  AppendRecordTableModel.h  AppendRowTableModel.cpp  AppendRowTableModel.h  CMakeLists.txt  CustomHeaderTableModel.cpp  CustomHeaderTableModel.h  CustomRolesTableModel.cpp  CustomRolesTableModel.h  DefaultHeaderTableModel.cpp  DefaultHeaderTableModel.h  EditableTableModel.cpp  EditableTableModel.h  InsertRowsTableModel.cpp  InsertRowsTableModel.h  ItemSelectionModelTester.cpp  ItemSelectionModelTester.h  PrependRowTableModel.cpp  PrependRowTableModel.h  ReadOnlyTableModel.cpp  ReadOnlyTableModel.h  RemoveFirstRowTableModel.cpp  RemoveFirstRowTableModel.h  RemoveLastRowTableModel.cpp  RemoveLastRowTableModel.h  RemoveRowsTableModel.cpp  RemoveRowsTableModel.h
libs/ItemModel_TestLib/src/: CMakeLists.txt
libs/ItemModel_TestLib/src/Mdt/ItemModel/TestLib/: DataChangedSignalSpy.cpp  DataChangedSignalSpy.h  InsertRowsSignalsSpy.cpp  InsertRowsSignalsSpy.h  RemoveRowsSignalsSpy.cpp  RemoveRowsSignalsSpy.h  RowSelectionHelpers.cpp  RowSelectionHelpers.h  TableModelCommonBase.cpp  TableModelCommonBase.h
libs/ItemModel_TestLib/tests/: CMakeLists.txt
libs/ItemModel_TestLib/tests/src/: DataChangedSignalSpyTest.cpp  InsertRowsSignalsSpyTest.cpp  RemoveRowsSignalsSpyTest.cpp  TestLibRowSelectionHelpersTest.cpp
libs/ItemView_QtWidgets/src/: CMakeLists.txt
libs/ItemView_QtWidgets/src/Mdt/ItemView/: Helpers.cpp  Helpers.h
libs/ItemView_QtWidgets/tests/: CMakeLists.txt
libs/ItemView_QtWidgets/tests/src/: ItemViewHelpersTest.cpp  ItemViewHelpersTest.h
libs/ItemView_QtWidgets/tests/src/common/: CMakeLists.txt
packaging/conan/mdtitemmodel/: conanfile.py
packaging/conan/mdtitemmodel/test_package/: CMakeLists.txt  conanfile.py  main.cpp
packaging/conan/mdtitemmodeltestlib/: conanfile.py
packaging/conan/mdtitemmodeltestlib/test_package/: CMakeLists.txt  conanfile.py  main.cpp
packaging/conan/mdtitemviewqtwidgets/: conanfile.py
packaging/conan/mdtitemviewqtwidgets/test_package/: CMakeLists.txt  conanfile.py  main.cpp
