# Distributed under the OSI-approved BSD 3-Clause License.  See accompanying
# file Copyright.txt or https://cmake.org/licensing for details.

add_library(Mdt_ItemView_QtWidgets_TestCommon STATIC
  RemoveRowsTableModel.cpp
)
add_library(Mdt::ItemViewQtWidgetsTestCommon ALIAS Mdt_ItemView_QtWidgets_TestCommon)

target_include_directories(Mdt_ItemView_QtWidgets_TestCommon
  PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
   $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
)

target_link_libraries(Mdt_ItemView_QtWidgets_TestCommon
  PUBLIC
    Mdt::ItemModelTestLib
)
